# aoc24

./: CMakeLists.txt  new_day.py
.github/workflows/: cmake-single-platform.yml
Day0/: CMakeLists.txt  day0.cc  tests.cc
Day1/: CMakeLists.txt  day1.cc  day1.h  main.cc  tests.cc
Day10/: CMakeLists.txt  day10.cc  day10.h  main.cc  tests.cc
Day11/: CMakeLists.txt  day11.cc  day11.h  main.cc  tests.cc
Day12/: CMakeLists.txt  day12.cc  day12.h  main.cc  tests.cc
Day13/: CMakeLists.txt  day13.cc  day13.h  main.cc  tests.cc
Day14/: CMakeLists.txt  day14.cc  day14.h  main.cc  tests.cc
Day15/: CMakeLists.txt  day15.cc  day15.h  main.cc  tests.cc
Day2/: CMakeLists.txt  day2.cc  day2.h  main.cc  tests.cc
Day3/: CMakeLists.txt  day3.cc  day3.h  main.cc  tests.cc
Day4/: CMakeLists.txt  day4.cc  day4.h  main.cc  tests.cc
Day5/: CMakeLists.txt  day5.cc  day5.h  main.cc  tests.cc
Day6/: CMakeLists.txt  day6.cc  day6.h  main.cc  tests.cc
Day7/: CMakeLists.txt  day7.cc  day7.h  main.cc  tests.cc
Day8/: CMakeLists.txt  day8.cc  day8.h  main.cc  tests.cc
Day9/: CMakeLists.txt  day9.cc  day9.h  main.cc  tests.cc
lib/helper/: CMakeLists.txt  utils.cpp  utils.h
